# interwebs-speed

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.arm  README.md  analize_internet_speed.py  config.json  cron  docker-compose.yml  pyproject.toml  readme.md  utils.py
.github/workflows/: ci.yml
scripts/: run.sh
services/: file_service.py  internet_speed_service.py
src/interwebs_speed/: __init__.py  __main__.py  cli.py  utils.py
src/interwebs_speed/core/: analisys.py
src/interwebs_speed/services/: analisys_service.py  file_service.py  internet_speed_service.py  mail_service.py  summary_service.py
tests/: test_analisys_service.py  test_cli.py  test_main.py  test_summary_service.py  test_utils.py
tests/core/: test_analisys.py
tests/services/: test_analisys_service.py  test_file_service.py  test_internet_speed_service.py  test_mail_service.py  test_summary_service.py
tools/helm/: Chart.yaml  values.yaml
tools/helm/interwebs-speed/: values.yaml
tools/helm/interwebs-speed/templates/: _helpers.tpl  cronjob.yaml  pvc.yaml
tools/helm/templates/: configmap.yaml  pvc.yaml  secret.yaml
tools/kind/: cluster.yaml
tools/scripts/: install.sh  run-pod.sh  run.ps1  run.sh  uninstall.sh
