[project]
name = "interwebs-speed"
version = "0.1.0"
description = ""
authors = [
    {name = "Cássio Farias Machado",email = "me@cassiofariasmachado.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "speedtest-cli (>=2.1.3,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "interwebs_speed", from = "src"}]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
